# StarlaLang

./: ,gitignore  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .replit  main.py  main.star  pyproject.toml  requirements.txt
.github/workflows/: code_standards.yml
compiler/: __init__.py  __main__.py  compiler.py  lexer.py  parser.out  parser.py  trees.py  typebase.py  types.py
compiler/models/: __init__.py  arg.py  base.py  composite.py  condition.py  control.py  expr.py  expressions.py  func.py  module.py  name.py  namespace.py  object.py  op.py  operator.py  primitives.py  program.py  return_.py  statements.py  type.py  types.py  vardecl.py
compiler/objects/: base_object.py  builtins.py
tests/: test_lexing.py  test_parsing.py
