[tool.poetry]
name = "Starlalang"
version = "0.1.0"
description = ""
authors = ["GrandMoff100 <minecraftcrusher100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ply = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
